# pandahouse

./: .drone.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  clickhouse.xml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: test.yml
pandahouse/: __init__.py  _version.py  convert.py  core.py  http.py  utils.py
pandahouse/tests/: conftest.py  test_core.py  test_http.py  test_utils.py
