[tool.poetry]
name = "intelecy-pandahouse"
version = "0.2.0"
description = "Pandas interface for Clickhouse HTTP API"
authors = ["Krisztián Szűcs <szucs.krisztian@gmail.com>", "Jonathan Camp <jonathan.camp@intelecy.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/Intelecy/pandahouse"
readme = "README.md"
packages = [
    { include = "pandahouse" }
]
exclude = ["pandahouse/tests"]

[tool.poetry.dependencies]
python = "^3.6.1"
toolz = "^0.10.0"
requests = "^2.22.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-runner = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
